--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Introduction to text embedding using Gemini",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "watch": "tsc --watch",
+    "start": "node dist/index.js",
+    "start:watch": "tsc-watch --onSuccess \"node dist/index.js\""
   },
   "keywords": [
     "Gemini",
@@ -14,10 +17,14 @@
   "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.19.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "pg": "^8.12.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^22.5.5",
+    "@types/pg": "^8.11.10",
     "tsc-watch": "^6.2.0",
     "typescript": "^5.5.4"
   }
