--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.19.0",
+    "@types/multer": "^1.4.12",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "1.4.5-lts.1",
     "pg": "^8.12.0",
     "uuid": "^10.0.0"
   },
